--- a/lesson-01/website.html
+++ b/lesson-01/website.html
@@ -8,5 +8,6 @@
 <body>
     <p>Press the button: </p>
     <button>Hello</button>
+    <a href="https://github.com/mridulcreates" target="_blank">Github Link</a> # href is used to link to another webpage and is an attribute of the anchor tag <a>
 </body>
 </html>
